--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "^4.15.2",
     "body-parser": "^1.15.2",
     "mongo": "^0.1.0",
-    "mongoose": "^4.9.6"
+    "mongoose": "^4.9.6",
+    "request": "^2.81.0"
+
   },
   "homepage": "https://github.com/CamB17/rapid-prototype#readme"
 }
